add sorting for posts