@@ -11,6 +11,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.lang.Nullable;
 import org.springframework.stereotype.Service;
 import software.amazon.awssdk.services.s3.S3Client;
@@ -91,21 +92,24 @@ public class PostService {
 		return posts.stream().map(PostConverter::convertToDto).toList();
 	}
 
-	public Page<PostResponse> getPostsByCommunityIdPaginated(Long communityId, int page, int size,
+	public Page<PostResponse> getPostsByCommunityIdPaginated(Long communityId, int page, int size, String sort,
 			@Nullable Long viewerId) {
 
 		communityRepository.findById(communityId)
 			.orElseThrow(() -> new PostException("Community not found with ID: " + communityId));
 
-		Pageable pageable = PageRequest.of(page, size);
+		Sort order = switch (sort.toLowerCase()) {
+			case "likes" -> Sort.by(Sort.Direction.DESC, "likeCount").and(Sort.by(Sort.Direction.DESC, "datePosted"));
+			case "oldest" -> Sort.by(Sort.Direction.ASC, "datePosted");
+			default -> Sort.by(Sort.Direction.DESC, "datePosted");
+		};
+
+		Pageable pageable = PageRequest.of(page, size, order);
 		Page<Post> posts = postRepository.findAllByCommunityCommunityId(communityId, pageable);
 
-		Set<Long> likedIds;
-		if (viewerId != null)
-			likedIds = Set.copyOf(postLikesRepository.findLikedPostIds(viewerId, posts.map(Post::getPostId).toList()));
-		else {
-			likedIds = Collections.emptySet();
-		}
+		Set<Long> likedIds = viewerId == null ? Set.of()
+				: Set.copyOf(postLikesRepository.findLikedPostIds(viewerId, posts.map(Post::getPostId).toList()));
+
 		return posts.map(p -> PostConverter.convertToDtoWithBoolean(p, likedIds.contains(p.getPostId())));
 	}
 
